feat: Start kafka setup and configuration
Create env project
Create bus project
Start configuring kafka, using masstransit, create interface and implementation for producers
Create a new integration event as a producer

--- a/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
+++ b/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
@@ -7,11 +7,15 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="9.0.0" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.2.0" />
+        <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0" />
+        <PackageReference Include="MassTransit.Kafka" Version="7.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     </ItemGroup>
     
     <ItemGroup>
       <ProjectReference Include="..\buckstore.orders.service.application\buckstore.orders.service.application.csproj" />
+      <ProjectReference Include="..\buckstore.orders.service.infrastructure.bus\buckstore.orders.service.infrastructure.bus.csproj" />
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.Data\buckstore.orders.service.infrastructure.Data.csproj" />
     </ItemGroup>
     
