feat: finish kafka configuration
Create a abstract class for consumers
Create a consumer for each event
Finish kafka setup on IoC
Create a new producer to send values to manager

--- a/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
+++ b/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
@@ -17,6 +17,7 @@
       <ProjectReference Include="..\buckstore.orders.service.application\buckstore.orders.service.application.csproj" />
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.bus\buckstore.orders.service.infrastructure.bus.csproj" />
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.Data\buckstore.orders.service.infrastructure.Data.csproj" />
+      <ProjectReference Include="..\buckstore.orders.service.infrastructure.environment\buckstore.orders.service.infrastructure.environment.csproj" />
     </ItemGroup>
     
 
