--- a/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
+++ b/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0" />
         <PackageReference Include="MassTransit.Kafka" Version="7.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.4" />
     </ItemGroup>
     
     <ItemGroup>
