--- a/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
+++ b/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="MassTransit.AspNetCore" Version="7.2.0" />
         <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.0" />
         <PackageReference Include="MassTransit.Kafka" Version="7.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.4" />
     </ItemGroup>
