--- a/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
+++ b/src/buckstore.orders.service.infrastructure.CrossCutting.IoC/buckstore.orders.service.infrastructure.CrossCutting.IoC.csproj
@@ -20,7 +20,7 @@
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.bus\buckstore.orders.service.infrastructure.bus.csproj" />
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.Data\buckstore.orders.service.infrastructure.Data.csproj" />
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.environment\buckstore.orders.service.infrastructure.environment.csproj" />
-      <ProjectReference Include="..\buckstore.orders.service.infrastructure.proxy.globalPayments\buckstore.orders.service.infrastructure.proxy.globalPayments.csproj" />
+      <ProjectReference Include="..\buckstore.orders.service.infrastructure.proxy.fkdPayments\buckstore.orders.service.infrastructure.proxy.fkdPayments.csproj" />
     </ItemGroup>
     
 
